# chaosrank

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  chaosrank.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: convert_deathstar.py  extract_incidents.py  plot_results.py  run_comparison.py
benchmarks/examples/: kafka-topics.json  online_boutique_topology.json  seed_incidents.csv
benchmarks/examples/asyncapi-specs/: basket-service.yaml  inventory-service.yaml  order-service.yaml
benchmarks/real_traces/: social_network.json  social_network_incidents.csv
benchmarks/sensitivity/: README.md  run_sensitivity.py
benchmarks/sensitivity/results/: alpha_sweep.csv  summary.txt  w_pr_sweep.csv
chaosrank/: .dockerignore  cli.py
chaosrank/adapters/: asyncapi.py  base.py  kafka.py
chaosrank/graph/: blast_radius.py  builder.py  visualize.py
chaosrank/incident_adapters/: alertmanager.py  base.py  csv_export.py  grafana_oncall.py  opsgenie.py  pagerduty.py
chaosrank/output/: json_out.py  litmus.py  table.py
chaosrank/parser/: async_deps.py  incidents.py  jaeger.py  normalize.py  otlp.py
chaosrank/scorer/: fragility.py  ranker.py  suggest.py
docs/: algorithm.md  architecture.md  future-work.md
testdata/incidents/: sample.csv
testdata/traces/: sample.json
tests/: test_adapters.py  test_async_deps.py  test_blast_radius.py  test_fragility.py  test_incident_adapters.py  test_parser.py  test_parser_otlp.py  test_ranker.py
tests/fixtures/: alertmanager_alerts.json  grafana_oncall_alerts.json  opsgenie_alerts.json  otlp_tempo_trace.json  otlp_trace.json  pagerduty_incidents.json
